fix mobile spacing

--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -22,7 +22,7 @@
         font-family: $font-family-special;
         font-size: 2.5rem;
         line-height: 2.5rem;
-        letter-spacing: 0.8rem;
+        letter-spacing: 0.4rem;
         background: linear-gradient(fade-out($white, 0.1), fade-out($white, 1));
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -47,7 +47,7 @@
         h1 {
             font-size: 6.5rem;
             line-height: 6.5rem;
-            letter-spacing: 0.8rem;
+            letter-spacing: 0.4rem;
         }
 
         h2 {
